# FastAPI-ArchiPy-Boilerplate

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  manage.py  pyproject.toml
src/configs/: containers.py  dispatcher.py  runtime_config.py
src/controllers/user/v1/: user_controller.py
src/logics/user/: user_logic.py
src/models/dtos/user/domain/v1/: user_domain_interface_dtos.py
src/models/dtos/user/repository/: user_repository_interface_dtos.py
src/models/entities/: user_entity.py
src/models/types/: api_router_type.py  user_sort_type.py
src/repositories/user/: user_repository.py
src/repositories/user/adapters/: user_postgres_adapter.py
src/utils/: utils.py
